--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,4 +1,4 @@
-@import '../../sassVars.scss';
+@import "../../sassVars.scss";
 .home {
   position: relative;
   height: auto;
@@ -18,7 +18,7 @@
   overflow: hidden;
   > a {
     text-decoration: none;
-    h1 {
+    .logo {
       cursor: pointer;
       font-family: $mainFont;
       font-weight: 800;
@@ -27,26 +27,29 @@
       width: 4em;
       padding: 0;
       // line-height: 0.5em;
-    }  
+    }
   }
-  > div {
+  .hamburger {
+    display: none;
+  }
+  > .button-group {
     display: flex;
     z-index: 1;
-    > div {
+    > .button {
       background-color: #00000022;
       cursor: pointer;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: .5em 1.6em;
-      border: 1px #FFED17 solid;
+      padding: 0.5em 1.6em;
+      border: 1px #ffed17 solid;
       color: $white;
-      border-radius: .55em;
-      margin: 0 .8em;
-      transition: .2s;
+      border-radius: 0.55em;
+      margin: 0 0.8em;
+      transition: 0.2s;
       &:hover {
         cursor: pointer;
-        background: #FFED17;
+        background: #ffed17;
         color: $fontColor;
       }
     }
@@ -82,17 +85,19 @@
   // left: 200px;
 }
 .hook {
-  height: 26em;
+  min-height: 40vw;
   width: 30em;
-  margin: 18em 0 0 5em;
   color: $fontColor;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin-left: 2rem;
   > h2 {
     text-align: left;
     font-family: $mainFont;
     font-size: 3em;
+    z-index: 1;
     font-weight: 400;
   }
   > .hero-button {
@@ -100,15 +105,98 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: .8em 2em;
-    background-color: #FFED17;
+    padding: 0.8em 2em;
+    background-color: #ffed17;
     color: rgb(116, 116, 116);
-    border-radius: .55em;
-    transition: .3s;
+    border-radius: 0.55em;
+    transition: 0.3s;
     &:hover {
-      background-color: #006BF6;
+      background-color: #006bf6;
       color: white;
       cursor: pointer;
     }
+  }
+}
+
+@media (max-width: 500px) {
+  .header {
+    display: block;
+    height: auto;
+    padding: 0;
+    position: relative;
+    overflow: visible;
+    .logo {
+      margin: 1rem;
+    }
+    .hamburger {
+      position: absolute;
+      right: 1rem;
+      top: 0.5rem;
+      display: inline-block;
+      border: none;
+      background: transparent;
+      margin: 0;
+      padding: 0.5rem;
+      z-index: 2;
+      i {
+        color: $fontColor;
+      }
+    }
+    > .button-group {
+      z-index: 5;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 100vw;
+      position: absolute;
+      top: calc(-100vh - 1rem);
+      min-height: 100vh;
+      background: #0d89f3;
+      height: 100%;
+      transition: .4s;
+      > .button {
+        height: 2.5rem;
+        border: none;
+        background: transparent;
+        font-weight: 700;
+        font-size: 2rem;
+        margin: 2rem;
+      }
+    }
+    .show {
+      top: -1rem;
+    }
+  }
+  .hook {
+    margin: 10vw;
+    width: auto;
+    height: 70vh;
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 3rem;
+      text-align: center;
+    }
+    .hero-button {
+      z-index: 2;
+    }
+  }
+  .big-triangle {
+    left: -100px;
+    bottom: 200vh;
+    width: 140vw;
+  }
+}
+@media(max-width: 900px) {
+  .hook {
+    min-height: 50vh;
+
+  }
+}
+@media(max-width: 1372px) {
+  .hook {
+    margin-left: 1rem;
+  }
+  .hook > h2 {
+    font-size: 2rem;
   }
 }
