--- a/src/modal.scss
+++ b/src/modal.scss
@@ -142,3 +142,19 @@ $fontColor: rgb(24, 29, 66);
     }
   }
 }
+
+@media(max-width: 500px) {
+  .modal-container {
+    height: 100vh;
+  }
+  .modal {
+    .content {
+      min-height: 100vh;
+      min-width: 100vw;
+      margin: 0;
+      i {
+        right: 1.4rem;
+      }
+    }
+  }
+}
