--- a/src/components/Dashboard/EditSet.scss
+++ b/src/components/Dashboard/EditSet.scss
@@ -51,7 +51,8 @@
 .confirm-btn-holder {
   display: flex;
   justify-content: center;
-  margin-bottom: 15px;
+  margin-bottom: 3rem;
+
 }
 
 .confirm-btn {
@@ -72,4 +73,8 @@
     color: rgb(116, 116, 116);
     cursor: pointer;
   }
+}
+
+@media(max-width: 800px) {
+  
 }
