--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -23,10 +23,10 @@
   position: relative;
   box-sizing: border-box;
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     left: 0;
-    transform:rotate(-1deg) translate(0, -3rem);
+    transform: rotate(-1deg) translate(0, -3rem);
     width: 110vw;
     height: 100%;
     min-height: 3rem;
@@ -59,16 +59,30 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: .5em 1.6em;
-      border: 1px #FFED17 solid;
+      padding: 0.5em 1.6em;
+      border: 1px #ffed17 solid;
       color: $white;
-      border-radius: .55em;
-      margin: 0 .8em;
-      transition: .4s;
+      border-radius: 0.55em;
+      margin: 0 0.8em;
+      transition: 0.4s;
       &:hover {
         cursor: pointer;
-        background: #FFED17;
+        background: #ffed17;
         color: $fontColor;
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .navbar-container {
+    .navbar {
+      .buttons {
+        div {
+          &:nth-of-type(1) {
+            display: none;
+          }
+        }
       }
     }
   }
