--- a/src/components/Dashboard/EditSet.scss
+++ b/src/components/Dashboard/EditSet.scss
@@ -19,6 +19,7 @@
     justify-content: center;
     padding: 1em;
   }
+  
   .question-list {
     max-height: 50%;
     overflow-y: scroll;
@@ -44,6 +45,11 @@
         text-align: left;
         margin-left: 0;
       }
+    }
+    .set-toggle{
+      width: 20px;
+      height: 20px;
+      background-color: green;
     }
   }
 }
@@ -75,6 +81,19 @@
   }
 }
 
-@media(max-width: 800px) {
-  
+@media(min-width: 581px){
+  .set-toggle{
+    display:none;
+  }
+}
+
+@media(max-width: 580px) {
+  .edit-set-page > .hidden{
+    display: none;
+  }
+  .edit-set-page .question-list{
+    width: 100vw;
+    height: 100%;
+  }
+
 }
