--- a/src/components/GameRoom/Results.scss
+++ b/src/components/GameRoom/Results.scss
@@ -75,7 +75,8 @@ $duration: 1000;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 100vh;
+  height: auto;
+  min-height: 100vh;
   width: 100vw;
   font-family: $mainFont;
   color: aliceblue;
@@ -83,22 +84,30 @@ $duration: 1000;
 
 .question-info {
   margin-top: 5rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column
 }
 
 .results-question-display {
-  // margin-top: 2rem;
   font-size: 3rem;
   color: aliceblue;
   display: flex;
   justify-content: center;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .results-answer-display {
   font-size: 1.7em;
   color: #FFED17;
   display: flex;
-  justify-content: center;
+  align-content: center;
+  // display: flex;
+  // justify-content: center;
   margin-top: 1.7rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 };
 
 .timer {
@@ -161,6 +170,12 @@ $duration: 1000;
   }
 }
 
-@media(max-width: 360px){
-  
+@media(max-width: 320px){
+  .question-info {
+    margin-top: 2rem;
+  }
+
+  .results-question-display {
+    font-size: 1.5rem;
+  }
 }
