Fixed small css in components

--- a/src/components/CreateRoom/CreateRoom.scss
+++ b/src/components/CreateRoom/CreateRoom.scss
@@ -60,6 +60,7 @@
       opacity: 0.8;
       box-shadow: 0.5px 0.5px 5px #333;
       font-size: 1.1rem;
+      text-align: center;
       &:hover {
         cursor: pointer;
         color: #FFFCF2;
