--- a/src/components/Dashboard/EditSet.scss
+++ b/src/components/Dashboard/EditSet.scss
@@ -46,11 +46,28 @@
         margin-left: 0;
       }
     }
+
     .set-toggle{
-      width: 20px;
-      height: 20px;
-      background-color: green;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 10%;
+      width: auto;
+      border: 1px #0D89F3 solid;
+      border-radius: 0.5em;
+      font-size: 1.2em;
+      // margin-bottom: 2em;
+      align-self: center;
+      background: transparent;
+      color: $fontColor;
+      &:hover {
+        background: #FFED17;
+        color: $fontColor;
+        cursor: pointer;
+        transition: 0.3s;
+      }
     }
+
   }
 }
 
@@ -82,10 +99,12 @@
 }
 
 @media(min-width: 581px){
-  .set-toggle{
+  .edit-set-page .question-list .set-toggle{
     display:none;
   }
+
 }
+
 
 @media(max-width: 580px) {
   .edit-set-page > .hidden{
@@ -94,6 +113,12 @@
   .edit-set-page .question-list{
     width: 100vw;
     height: 100%;
+  }
+  .edit-set-page .question-list .confirm-btn-holder .confirm-btn{
+    margin-top: 0;
+  }
+  .edit-set-page .question-list .confirm-btn-holder{
+    margin-bottom: 1rem;
   }
 
 }
