--- a/src/components/JoinRoom/JoinRoom.scss
+++ b/src/components/JoinRoom/JoinRoom.scss
@@ -45,6 +45,7 @@
     margin-top: 2em;
     color: #FFFCF2;
     transition: 1s;
+    max-width: 85%;
     &::placeholder {
       font-family: $mainFont;
       color: #FFFCF2;
@@ -63,6 +64,7 @@
     font-size: 2em;
     margin-top: 1rem;
     font-family: $secondaryFont;
+    max-width: 75%;
     &::placeholder {
       font-family: $secondaryFont;
     }
@@ -209,7 +211,7 @@
     }
 
     > input {
-      font-size: 2.1em;
+      font-size: 1.9em;
       height: auto;
     }
 
