--- a/src/components/GameRoom/Question.scss
+++ b/src/components/GameRoom/Question.scss
@@ -16,17 +16,20 @@ $secondaryColors: rgb(236, 100, 85), rgb(255, 251, 167), rgb(115, 245, 143),
   padding: 1rem;
   h1,
   h2 {
-    font-size: 2em;
+    font-size: 2.5em;
   }
   h1 {
     font-weight: 700;
   }
-  .answers {
+  .showAnswers {
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+  }
+  .hideAnswers {
+    visibility: hidden;
   }
   button {
     box-shadow: 0px 0px 20px #333;
